--- a/src/main/resources/static/css/account.css
+++ b/src/main/resources/static/css/account.css
@@ -1,7 +1,8 @@
 /* Общие стили страниц */
-*{
+* {
     font-family: 'Comfortaa', sans-serif;
 }
+
 html,
 h1,
 h2,
@@ -11,120 +12,19 @@ h5,
 h6 {
     color: var(--text-color);
 }
-p{
+
+p {
     color: var(--main-color);
 }
+
 body {
     background: var(--background-color);
 }
+
 a {
     text-decoration: none;
     color: inherit;
 }
-
-/* Стили для аккаунта */
-.account_div {
-    background: var(--second-color);
-    height: 440px;
-    margin-top: 30px;
-    border-radius: 20px;
-}
-.account_div2 {
-    background: var(--main-color);
-    height: 90px;
-    margin-top: 50px;
-    border-radius: 20px;
-    text-align: left;
-}
-.margin-top-20 {
-    margin-top: 20px;
-}
-
-.theme_div {
-    background: var(--second-color);
-    height: 440px;
-    margin-top: 30px;
-    margin-left: 50px;
-    border-radius: 20px;
-}
-
-.theme_div2_no_color {
-    height: 72px;
-    margin-top: 50px;
-    border-radius: 20px;
-    font-size: 26px;
-}
-
-.theme_p_no_color {
-    margin-top: -10px;
-}
-
-.line_block {
-    border-bottom: 3px solid var(--main-color);
-    width: 100%;
-}
-
-.groups_div {
-    background: var(--second-color);
-    height: 420px;
-    margin-top: 30px;
-    margin-left: 0px;
-    border-radius: 20px;
-}
-
-.groups_div2_no_color {
-    height: 72px;
-    margin-top: 50px;
-    border-radius: 20px;
-    font-size: 26px;
-}
-
-.groups_p_no_color {
-    margin-top: -10px;
-}
-
-.recommend_div2 {
-    background: var(--main-color);
-    height: 120px;
-    margin-top: 50px;
-    border-radius: 20px;
-}
-.recommend_div2 p{
-    margin-top: 5px;
-    font-size: 24px;
-}
-
-.recommend_div3{
-    background: #ffffff;
-    height: 100px;
-    width: 400px;
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-    border-radius: 20px;
-}
-
-.figure_div {
-    object-fit: cover;
-    object-position: center;
-    border-radius:50%;
-    width: 130px;
-    height: 130px;
-    margin-top: 50px;
-    margin-left: 35px;
-    background: white;
-}
-.figure_img {
-    object-fit: cover;
-    object-position: center;
-    border-radius:50%;
-    background: white;
-    height: 150px;
-    width: 150px;
-    border: 3px solid #fff;
-    transition: background ease-out 200ms;
-}
-
 
 /* Стили для подвала */
 .footer {
@@ -136,6 +36,7 @@ a {
     width: 100%;
     height: 40px;
 }
+
 /*Стиль выбора цвета*/
 label {
     font-family: sans-serif;
@@ -143,17 +44,20 @@ label {
     display: block;
     position: relative;
 }
+
 input {
     padding: 5px 15px;
     font-size: 16px;
     width: 100%;
     box-sizing: border-box;
 }
+
 input[type=color] {
     padding: 0;
     border: 0;
     height: 40px;
 }
+
 input[type=color]:after {
     content: attr(data-value);
     position: absolute;
@@ -163,13 +67,15 @@ input[type=color]:after {
     display: block;
     width: 100%;
 }
+
 .color-icon {
     position: absolute;
     bottom: 10px;
     right: 10px;
     color: #666;
 }
-#primary_color{
+
+#primary_color {
     border: 3px solid var(--background-color);
     border-radius: 50%;
     height: 60px;
@@ -181,11 +87,13 @@ input[type=color]:after {
 #primary_color::-webkit-color-swatch-wrapper {
     padding: 0;
 }
+
 #primary_color::-webkit-color-swatch {
     border: none;
     border-radius: 50%;
 }
-#second_color{
+
+#second_color {
     border: 3px solid var(--background-color);;
     border-radius: 50%;
     height: 60px;
@@ -197,14 +105,16 @@ input[type=color]:after {
 #second_color::-webkit-color-swatch-wrapper {
     padding: 0;
 }
+
 #second_color::-webkit-color-swatch {
     border: none;
     border-radius: 50%;
 }
+
 #avatar {
     object-fit: cover;
     object-position: center;
-    border-radius:50%;
+    border-radius: 50%;
     margin-left: 35px;
     background: var(--background-color);
     height: 150px;
@@ -220,22 +130,23 @@ input[type=color]:after {
 input[type="file"] {
     display: none;
 }
-#separator{
+
+#separator {
     background: var(--main-color);
     width: 500px;
     height: 20px;
 }
-.button{
+
+.button {
     background: var(--main-color);
 }
+
 /*переключатель темы*/
-#toggle_checkbox
-{
+#toggle_checkbox {
     display: none;
 }
 
-label
-{
+label {
     position: static;
     width: 116px;
     height: 56px;
@@ -250,8 +161,7 @@ label
     overflow: hidden;
 }
 
-#star
-{
+#star {
     position: absolute;
     top: 13px;
     left: 13px;
@@ -264,19 +174,16 @@ label
     z-index: 1;
 }
 
-#star-1
-{
+#star-1 {
     position: relative;
 }
 
-#star-2
-{
+#star-2 {
     position: absolute;
     transform: rotateZ(36deg);
 }
 
-.star
-{
+.star {
     top: 0;
     left: -7px;
     font-size: 54px;
@@ -285,8 +192,7 @@ label
     transition: 0.3s ease color;
 }
 
-#moon
-{
+#moon {
     position: absolute;
     bottom: -52px;
     right: 8px;
@@ -297,43 +203,37 @@ label
     transition: 0.3s ease bottom;
 }
 
-#moon:before
-{
+#moon:before {
     content: "";
     position: absolute;
     top: -12px;
     left: -17px;
     width: 40px;
     height: 40px;
-    background-color:#fff;
+    background-color: #fff;
     border-radius: 50%;
     transition: 0.3s ease background-color;
 }
 
-#toggle_checkbox:checked + label
-{
+#toggle_checkbox:checked + label {
     background-color: #000;
 }
 
-#toggle_checkbox:checked + label #star
-{
+#toggle_checkbox:checked + label #star {
     top: 3px;
     left: 64px;
     transform: scale(0.3);
     background-color: yellow;
 }
 
-#toggle_checkbox:checked + label .star
-{
+#toggle_checkbox:checked + label .star {
     color: yellow;
 }
 
-#toggle_checkbox:checked + label #moon
-{
+#toggle_checkbox:checked + label #moon {
     bottom: 8px;
 }
 
-#toggle_checkbox:checked + label #moon:before
-{
+#toggle_checkbox:checked + label #moon:before {
     background-color: #000;
 }
