--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -3,9 +3,11 @@
 <head>
     <title>IG</title>
     <link rel="stylesheet" th:href="@{/group.css}"/>
+    <link rel="stylesheet" th:href="@{/css/main_layout_items.css}"/>
+    <link rel="stylesheet" th:href="@{/item_list_group.css}"/>
+    <link rel="stylesheet" th:href="@{/item_list_post.css}"/>
     <link rel="stylesheet" th:href="@{/color.css}"/>
     <link rel="stylesheet" th:href="@{/header.css}"/>
-    <link rel="stylesheet" th:href="@{/item_list_group.css}"/>
     <!--Картинки-->
     <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
 
@@ -25,10 +27,25 @@
 <header class="container-fluid">
     <div class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-1">
                 <h1><a href="/">IG</a></h1>
             </div>
-            <nav class="col-8">
+            <div class="col-3">
+                <img src="/image/cat-icon.png" alt="Тут должна сидеть кошка!" height="95px"
+                     style="margin-top: -15px; margin-left: -50px;"/>
+            </div>
+            <div class="col-3">
+            </div>
+            <div class="col-1">
+                <!--<div class="flexbox">
+                    <div class="search">
+                        <div>
+                            <input type="text" placeholder="Поиск..." required>
+                        </div>
+                    </div>
+                </div>-->
+            </div>
+            <nav class="col-4">
                 <ul>
                     <li><a href="/groups">Сообщества</a></li>
                     <li>
@@ -54,17 +71,17 @@
     </div>
 </header>
 <body style="background: var(--background-color);">
-<div class="container text-center account_form">
+<div class="container text-center">
     <div class="row row-cols-auto">
         <div class="col-8">
             <!--Шапка сообщества-->
-            <div class="group_div">
-                <div class="group_div2">
+            <div class="block_div" style="height: 310px;">
+                <div class="block_div_color">
                     <main>
                         <br/>
                         <input type="file" name="image" id="image" accept="image/*"/>
                         <div id="preview">
-                            <img class="figure_img" id="avatar" alt="image" th:src="${group.getAvtar()}"/>
+                            <img class="avatar_img" id="avatar" alt="image" th:src="${group.getAvtar()}"/>
                         </div>
                     </main>
                 </div>
@@ -83,7 +100,7 @@
                     <div class="mb-3 col-12 col-md-6">
                         <input type="file" name="image" id="image1" accept="image/*"/>
                         <div id="news">
-                            <img class="figure_img" id="avatar1" alt="image1"/>  <!--th:src="${userLogin.getImg()}"/>-->
+                            <img class="avatar_img" id="avatar1" alt="image1"/>  <!--th:src="${userLogin.getImg()}"/>-->
                         </div>
                         <br/>
                     </div>
@@ -105,13 +122,13 @@
 
         <div class="col-4">
             <!--Список сообществ-->
-            <div class="recommend_div">
-                <div class="recommend_div2_no_color">
+            <div class="block_div" style="margin-left: 50px; height: 600px;">
+                <div class="block_div_no_color">
                     <br/>
-                    <p class="recommend_p_no_color">Рекомендации</p>
+                    <p class="block_p_no_color">Рекомендации</p>
                 </div>
-                <hr class="line_block"/>
-                <table>
+                <hr class="block_line"/>
+                <table style="margin-top: -10px; margin-left: -2px;">
                     <tbody>
                     <tr th:if="${groups.isEmpty()}">
                         </br>
@@ -119,10 +136,10 @@
                     </tr>
                     <tr th:each="group : ${groups}">
                         <td>
-                            <form id="groupForm" action="#"
-                                  th:action="@{/group/{id}(id=${group.getId()})}" method="get">
+                            <form id="groupForm" action="#" th:action="@{/group/{id}(id=${group.getId()})}"
+                                  method="get">
                                 <button type="submit" class="no-button">
-                                    <div class="recommend_div3">
+                                    <div class="div_group_item_list">
                                         <div class="row">
                                             <div class="col-2 col-md-1">
                                                 <img class="figure_img_group_item_list" alt="image"
@@ -132,7 +149,8 @@
                                                 <p class="name_group_item_list" th:text="${group.getName()}"> Имя </p>
                                                 <div class="main_div_item_list">
                                                     <div class="icon_div_item_list">
-                                                        <i class="fa-solid fa-user"></i></div>
+                                                        <i class="fa-solid fa-user"></i>
+                                                    </div>
                                                     <div class="subscribes_div_item_list">
                                                         <p class="subscribes_p_item_list"
                                                            th:text="${group.getSubscribes()}"></p>
@@ -152,33 +170,6 @@
     </div>
 </div>
 
-<!--<div class="container text-center account_form">
-    <div class="row row-cols-auto">
-        <div class="col-8">
-            <div class="group_div">
-                <form class="row justify-content-center" id="colorForm" method="post">
-                    <div class="mb-3 col-10 col-md-8">
-                        <input type="file" name="image" id="image1" accept="image/*"/>
-                        <div id="news">
-                            <img class="figure_img" id="avatar1" alt="image1"/>  &lt;!&ndash;th:src="${userLogin.getImg()}"/>&ndash;&gt;
-                        </div>
-                        <br/>
-                    </div>
-                    <div class="mb-3 col-10 col-md-8" align="left">
-                        <p class="nameGroups">Название сообщества</p>
-                        <p class="dataNews">Дата публикации</p>
-                        <br/>
-                    </div>
-                    <div class="mb-3 col-10 col-md-8" align="left">
-                        <p class="nameGroups">Игра 2023 года: Hi-Fi Rush, Alan Wake 2, Baldur's Gate 3</p>
-                        <img class="col-12 col-md-8" src="https://newcdn.igromania.ru/articles/pics/tmp/images/2024/1/5/3c54d2b3-ec9a-49a1-90f1-e08585752577.webp">
-                        <br/>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>-->
 
 </body>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet"/>
